[package]
name = "wry-ios"
version = "0.1.0"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wry-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
wry = { git ="https://github.com/tauri-apps/wry", branch = "feat/ios" }
#wry = { path = "../wry" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"
